added blur and sharpen

--- a/proj03/CanvasPaint.html
+++ b/proj03/CanvasPaint.html
@@ -50,6 +50,9 @@
           <ul>
             <li id="menuFade">Fade</li>
             <li id="menuUnfade">Unfade</li>
+            <li id="menuBlur">Blur</li>
+            <li id="menuSharpen">Sharpen</li>
+            <li id="menuDetectEdges">Detect Edges</li>
           </ul>
         </li>
       </ul>
