updated starter files

--- a/proj5/trackball.html
+++ b/proj5/trackball.html
@@ -11,9 +11,9 @@
     <div id="controls">
       <div id="objectdiv">
         <select id="object1">
-	  <option value="objects/cube.json">Cube</option>
-          <option value="objects/tetra.json">Tetrahedron</option>
-	  <option value="objects/teapot.json">Teapot</option>
+	  <option value="objects/cube3.json">Cube</option>
+      <option value="objects/tetra.json">Tetrahedron</option>
+	  <option value="objects/teapot2.json">Teapot</option>
 	  <option value="objects/servo.json">Servo</option>
 	  <option value="objects/pineapple.json">Pineapple</option>
 	  <option value="objects/cow.json">Cow</option>
