--- a/proj7/index.html
+++ b/proj7/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/PortalMaze2.loader.js";
+      var loaderUrl = buildUrl + "/PortalMaze_2.1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/PortalMaze2.data.gz",
-        frameworkUrl: buildUrl + "/PortalMaze2.framework.js.gz",
-        codeUrl: buildUrl + "/PortalMaze2.wasm.gz",
+        dataUrl: buildUrl + "/PortalMaze_2.1.data",
+        frameworkUrl: buildUrl + "/PortalMaze_2.1.framework.js",
+        codeUrl: buildUrl + "/PortalMaze_2.1.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Portal Maze 2",
